[package]
name = "observable-tree"
version = "0.1.0"
authors = ["Julia Naomi <jnboeira@outlook.com>", "Otavio Pace <otaviopp8@gmail.com>"]
description = "Observable btree"
readme = "README.md"
documentation = "https://docs.rs/observable-tree/"
repository = "https://github.com/naomijub/observable-tree"
keywords = ["tokio", "sync", "async", "observable", "btree",]
license = "LGPL-3.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["sync", "macros"] }