[package]
name = "observable-btree"
version = "0.1.0"
authors = ["Julia Naomi <jnboeira@outlook.com>", "Otavio Pace <otaviopp8@gmail.com>"]
description = "Reactive Observable BTree"
readme = "README.md"
documentation = "https://docs.rs/observable-btree/"
repository = "https://github.com/naomijub/observable-btree"
keywords = ["reactive", "observable", "btree", "tokio", "async", ]
license = "MIT"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
